force-app/main/default/objects/DocumentChecklistItem/fields/Assigned_To_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_For_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To For Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Document_Checklist_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>