force-app/main/default/objects/DocumentChecklistItem/fields/Benefit__c.field-meta.xml
<CustomField>
    <fullName>Benefit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit</label>
    <referenceTo>Benefit__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>