force-app/main/default/objects/DocumentChecklistItem/fields/Check_Log__c.field-meta.xml
<CustomField>
    <fullName>Check_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Log</label>
    <referenceTo>Check_Log__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>