force-app/main/default/objects/DocumentChecklistItem/fields/Closing__c.field-meta.xml
<CustomField>
    <fullName>Closing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing</label>
    <referenceTo>Closing__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>