force-app/main/default/objects/DocumentChecklistItem/fields/Conversion_File_Container__c.field-meta.xml
<CustomField>
    <fullName>Conversion_File_Container__c</fullName>
    <label>Conversion File Container</label>
    <length>60</length>
    <type>Text</type>
</CustomField>