force-app/main/default/objects/DocumentChecklistItem/fields/Disbursement_Request__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement Request</label>
    <referenceTo>Disbursement_Request__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>