force-app/main/default/objects/DocumentChecklistItem/fields/Document_Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Category_Name__c</fullName>
    <formula>DocumentCategory.MasterLabel</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Category Name</label>
    <type>Text</type>
</CustomField>