force-app/main/default/objects/DocumentChecklistItem/fields/Document_Checklist_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Checklist_Link__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_290, FIND(&quot;/services&quot;, $Api.Partner_Server_URL_290))
&amp;&quot;/&quot;&amp;Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Checklist Link</label>
    <type>Text</type>
</CustomField>