force-app/main/default/objects/DocumentChecklistItem/fields/Favorite__c.field-meta.xml
<CustomField>
    <fullName>Favorite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Favorite</label>
    <type>Checkbox</type>
</CustomField>