force-app/main/default/objects/DocumentChecklistItem/fields/File_Lookup_ID__c.field-meta.xml
<CustomField>
    <fullName>File_Lookup_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>File Lookup ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>