force-app/main/default/objects/DocumentChecklistItem/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>