force-app/main/default/objects/DocumentChecklistItem/fields/Other_Document_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Document_Type_Description__c</fullName>
    <label>Other Document Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>