force-app/main/default/objects/DocumentChecklistItem/fields/PROE_Category__c.field-meta.xml
<CustomField>
    <fullName>PROE_Category__c</fullName>
    <label>PROE Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>