force-app/main/default/objects/DocumentChecklistItem/fields/Service_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Service_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Enrollment</label>
    <referenceTo>Service_Enrollment__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>