force-app/main/default/objects/DocumentChecklistItem/fields/Spending_Plan__c.field-meta.xml
<CustomField>
    <fullName>Spending_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spending Plan</label>
    <referenceTo>Spending_Plan__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>