force-app/main/default/objects/DocumentChecklistItem/fields/Transaction_Item__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Item</label>
    <referenceTo>Transaction_Item__c</referenceTo>
    <relationshipLabel>Client Documents</relationshipLabel>
    <relationshipName>Client_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>