force-app/main/default/objects/DocumentChecklistItem/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>