force-app/main/default/objects/DocumentChecklistItem/fields/Trust_Asset__c.field-meta.xml
<CustomField>
    <fullName>Trust_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trust Asset</label>
    <referenceTo>Trust_Asset__c</referenceTo>
    <relationshipLabel>Document Checklist Items</relationshipLabel>
    <relationshipName>Document_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>