force-app/main/default/objects/DocumentChecklistItem/listViews/My_Document_Checklists.listView-meta.xml
<ListView>
    <fullName>My_Document_Checklists</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentRecord</columns>
    <columns>Status</columns>
    <columns>Who</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>New,Pending</value>
    </filters>
    <label>My Document Checklists</label>
</ListView>