force-app/main/default/objects/DocumentChecklistItem/listViews/Pending_Document_Items.listView-meta.xml
<ListView>
    <fullName>Pending_Document_Items</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>ParentRecord</columns>
    <columns>Status</columns>
    <columns>Who</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Document Items</label>
</ListView>